--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "lib",
     "src"
   ],
+  "bin": {
+    "nextjs-apollo": "./lib/cli.js"
+  },
   "jest": {
     "testEnvironment": "node",
     "clearMocks": true,
