--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage --detectOpenHandles ./src",
-    "build": "rm -rf lib && ./node_modules/.bin/babel src --ignore __tests__ --out-dir ./lib",
+    "build": "rm -rf lib && ./node_modules/.bin/babel src --ignore */__tests__,*/__mocks__ --out-dir ./lib",
     "prepublish": "npm run build",
     "postpublish": "rm -rf lib"
   },
@@ -69,21 +69,30 @@
     "subscriptions-transport-ws": "^0.9.14"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.3.5",
-    "apollo-client": "^2.4.2",
+    "apollo-cache-inmemory": "^1.3.12",
+    "apollo-cache-persist": "^0.1.1",
+    "apollo-client": "^2.4.8",
     "apollo-link": "^1.2.3",
+    "apollo-link-batch-http": "^1.2.6",
+    "apollo-link-context": "^1.0.12",
+    "apollo-link-error": "^1.1.5",
     "apollo-link-http": "^1.5.5",
     "apollo-link-retry": "^2.2.5",
     "apollo-link-ws": "^1.0.9",
-    "apollo-server-express": "^1.4.0",
+    "apollo-server": "^2.3.1",
+    "apollo-server-express": "^2.3.1",
+    "apollo-utilities": "^1.0.27",
     "cookie": "^0.3.1",
+    "global": "^4.3.2",
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
+    "node-fetch": "^2.3.0",
     "node-rsa": "^1.0.1",
     "prop-types": "^15.6.2",
     "react-apollo": "^2.2.4",
     "recompose": "^0.30.0",
-    "thelper": "^1.3.4"
+    "thelper": "^1.4.0",
+    "unfetch": "^4.0.1"
   }
 }
