--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "nextjs-apollo",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage --detectOpenHandles ./src",
-    "build": "rm -rf lib && ./node_modules/.bin/babel src --ignore __tests__ --out-dir ./lib",
+    "test": "eslint ./src; jest --coverage --detectOpenHandles ./src",
+    "build": "rm -rf lib && ./node_modules/.bin/babel src --ignore */__tests__,*/__mocks__ --out-dir ./lib",
     "prepublish": "npm run build",
     "postpublish": "rm -rf lib"
   },
@@ -31,59 +31,56 @@
     "clearMocks": true,
     "setupTestFrameworkScriptFile": "<rootDir>/__mocks__/index.js"
   },
+  "peerDependencies": {
+    "express": "^4.16.4",
+    "graphql": "^14.0.2",
+    "next": "^7.0.1",
+    "react": "^16.5.2"
+  },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.0.1",
-    "axios": "^0.18.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.2.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.6.0",
     "babel-plugin-lodash": "^3.3.4",
-    "babel-preset-next": "^1.2.0",
-    "body-parser": "^1.18.3",
-    "enzyme": "^3.7.0",
+    "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.6.0",
-    "eslint": "^5.5.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.9.1",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
     "express": "^4.16.4",
     "graphql": "^14.0.2",
-    "graphql-subscriptions": "^1.0.0",
     "graphql-tag": "^2.10.0",
     "jest": "^23.6.0",
     "next": "^7.0.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "subscriptions-transport-ws": "^0.9.15",
     "ws": "^6.0.0"
   },
-  "peerDependencies": {
-    "express": "^4.16.3",
-    "graphql": "^14.0.2",
-    "graphql-subscriptions": "^1.0.0",
-    "next": "^7.0.1",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "subscriptions-transport-ws": "^0.9.14"
-  },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.3.5",
-    "apollo-client": "^2.4.2",
-    "apollo-link": "^1.2.3",
-    "apollo-link-http": "^1.5.5",
-    "apollo-link-retry": "^2.2.5",
-    "apollo-link-ws": "^1.0.9",
-    "apollo-server-express": "^1.4.0",
+    "apollo-cache-inmemory": "^1.3.12",
+    "apollo-cache-persist": "^0.1.1",
+    "apollo-client": "^2.4.8",
+    "apollo-link": "^1.2.6",
+    "apollo-link-batch-http": "^1.2.6",
+    "apollo-link-error": "^1.1.5",
+    "apollo-link-retry": "^2.2.8",
+    "apollo-link-ws": "^1.0.12",
+    "apollo-server-express": "^2.3.1",
+    "apollo-utilities": "^1.0.27",
     "cookie": "^0.3.1",
+    "global": "^4.3.2",
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.3.0",
+    "loadash": "^1.0.0",
     "lodash": "^4.17.11",
-    "node-rsa": "^1.0.1",
+    "node-rsa": "^1.0.2",
     "prop-types": "^15.6.2",
-    "react-apollo": "^2.2.4",
-    "recompose": "^0.30.0",
-    "thelper": "^1.3.4"
+    "react-apollo": "^2.3.3",
+    "thelper": "^1.4.0"
   }
 }
